
AC_PREREQ(2.60)
AC_INIT(libdodo, 0.4.0, libdodo.sf.net)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_INSTALL

AC_SYS_LARGEFILE

AC_PREFIX_DEFAULT([/usr/local])

echo "" > include/directives.runtime.h

CPPFLAGS="$CPPFLAGS -I/usr/local/include"
LDFLAGS="$LDFLAGS -L/usr/local/lib"

AC_ARG_ENABLE(debug,
	AS_HELP_STRING([--enable-debug],[enable debug info]),
	[DEBUG="$enableval"])

if test "$DEBUG" = "yes"
then
	CFLAGS="$CFLAGS -g"
fi


AC_ARG_ENABLE(profiling,
        AS_HELP_STRING([--enable-profiling],[enable profiling]),
        [PROFILING="$enableval"])

if test "$PROFILING" = "yes"
then
        CFLAGS="$CFLAGS -pg"
fi

AC_ARG_ENABLE(deque,
        AS_HELP_STRING([--disable-deque],[use std::vector instead of std::deque(std::deque used by default)]),
        [DEQUE="$enableval"], [DEQUE="no"])

if test "$DEQUE" = "yes"
then
	echo -n -e "#define USE_DEQUE\n\n" >> include/directives.runtime.h        
fi


# Checks for libraries.
	AC_ARG_WITH([sqlite3],
		AS_HELP_STRING([--with-sqlite3(=/path)],[use sqlite3]),
		[MOD_SQLITE_DIR="$withval"], [MOD_SQLITE="no"])
	if test "$MOD_SQLITE" != "no"
	then
		if test "$MOD_SQLITE_DIR" = "yes"
		then
			MOD_SQLITE_DIR=/usr
		fi
		echo -n -e "#define SQLITE_EXT\n\n" >> include/directives.runtime.h
		CPPFLAGS="$CPPFLAGS -I$MOD_SQLITE_DIR/include"
		LDFLAGS="$LDFLAGS -L$MOD_SQLITE_DIR/lib"
		AC_CHECK_LIB([sqlite3], [sqlite3_open], AC_MSG_RESULT([sqlite3 lib was found]), AC_MSG_ERROR([sqlite3 lib was not found]))
		LIBS="$LIBS -lsqlite3"
		AC_CHECK_HEADER([sqlite3.h], AC_MSG_RESULT([sqlite3 header was found]), AC_MSG_ERROR([sqlite3 header was not found]))
	fi

	AC_ARG_WITH([mysql],
		AS_HELP_STRING([--with-mysql(=/path)],[use mysql]),
		[MOD_MYSQL_DIR="$withval"], [MOD_MYSQL="no"])
	if test "$MOD_MYSQL" != "no"
	then
		if test "$MOD_MYSQL_DIR" = "yes"
		then
			MOD_MYSQL_DIR=/usr
		fi
		echo -n -e "#define MYSQL_EXT\n\n" >> include/directives.runtime.h
		CPPFLAGS="$CPPFLAGS -I$MOD_MYSQL_DIR/include/mysql"
		LDFLAGS="$LDFLAGS -L$MOD_MYSQL_DIR/lib/mysql"
		AC_CHECK_LIB([mysqlclient], [mysql_init], AC_MSG_RESULT([mysql lib was found]), AC_MSG_ERROR([mysql lib was not found]))
		LIBS="$LIBS -lmysqlclient"
		AC_CHECK_HEADER([mysql.h], AC_MSG_RESULT([mysql header was found]), AC_MSG_ERROR([mysql header was not found]))
	fi

	AC_ARG_WITH([fcgi],
		AS_HELP_STRING([--with-fcgi(=/path)],[use fast CGI]),
		[MOD_FCGI_DIR="$withval"], [MOD_FCGI="no"])
	if test "$MOD_FCGI" != "no"		
	then
		if test "$MOD_FCGI_DIR" = "yes"
		then
			MOD_FCGI_DIR=/usr
		fi
		echo -n -e "#define FCGI_EXT\n\n" >> include/directives.runtime.h
		CPPFLAGS="$CPPFLAGS -I$MOD_FCGI_DIR/include"
		LDFLAGS="$LDFLAGS -L$MOD_FCGI_DIR/lib"
		AC_CHECK_LIB([fcgi], [FCGX_Init], AC_MSG_RESULT([fcgi lib was found]), AC_MSG_ERROR([fcgi lib was not found]))
		LIBS="$LIBS -lfcgi"
		AC_CHECK_HEADER([fcgiapp.h], AC_MSG_RESULT([fcgi header was found]), AC_MSG_ERROR([fcgi header was not found]))
	fi

	AC_ARG_WITH([pcre],
		AS_HELP_STRING([--with-pcre(=/path)],[use pcre]),
		[MOD_PCRE_DIR="$withval"], [MOD_PCRE="no"])
	if test "$MOD_PCRE" != "no"
	then
		if test "$MOD_PCRE_DIR" = "yes"
		then
			MOD_PCRE_DIR=/usr
		fi
		echo -n -e "#define PCRE_EXT\n\n" >> include/directives.runtime.h
		CPPFLAGS="$CPPFLAGS -I$MOD_PCRE_DIR/include"
		LDFLAGS="$LDFLAGS -L$MOD_PCRE_DIR/lib"
		AC_CHECK_LIB([pcre], [pcre_exec], AC_MSG_RESULT([pcre lib was found]), AC_MSG_ERROR([pcre was not found]))
		LIBS="$LIBS -lpcre"
		AC_CHECK_HEADER([pcre.h], AC_MSG_RESULT([pcre header was found]), AC_MSG_ERROR([pcre header was not found]))
	fi

	AC_ARG_WITH([dl],
		AS_HELP_STRING([--with-dl(=/path)],[use dl]),
		[MOD_DL_DIR="$withval"], [MOD_DL="no"])
	if test "$MOD_DL" != "no"
	then
		if test "$MOD_DL_DIR" = "yes"
		then
			MOD_DL_DIR=/usr
		fi
		echo -n -e "#define DL_EXT\n\n" >> include/directives.runtime.h
		CPPFLAGS="$CPPFLAGS -I$MOD_DL_DIR/include"
		LDFLAGS="$LDFLAGS -L$MOD_DL_DIR/lib"
                AC_ARG_ENABLE([dl-lib],
                        AS_HELP_STRING([--disable-dl-lib], [disable dl as lib (default=enabled)]),
                        [MOD_DL_LIB="$enableval"], [MOD_DL_LIB="no"])
                if test "$MOD_DL_LIB" = "yes"
                then
			AC_CHECK_LIB([dl], [dlopen], AC_MSG_RESULT([dl lib was found]), AC_MSG_ERROR([dl was not found]))
			LIBS="$LIBS -ldl"
		fi
		AC_CHECK_HEADER([dlfcn.h], AC_MSG_RESULT([dl header was found]), AC_MSG_ERROR([dl header was not found]))
	fi

	AC_ARG_WITH([libxml2],
		AS_HELP_STRING([--with-libxml2(=/path)],[use libxml2]),
		[MOD_LIBXML2_DIR="$withval"], [MOD_LIBXML2="no"])
	if test "$MOD_LIBXML2" != "no"
	then
		if test "$MOD_LIBXML2_DIR" = "yes"
		then
			MOD_LIBXML2_DIR=/usr
		fi
		echo -n -e "#define LIBXML2_EXT\n\n" >> include/directives.runtime.h
		CPPFLAGS="$CPPFLAGS -I$MOD_LIBXML2_DIR/include/libxml2"
		LDFLAGS="$LDFLAGS -L$MOD_LIBXML2_DIR/lib"
		AC_CHECK_LIB([xml2], [xmlInitParser], AC_MSG_RESULT([libxml2 lib was found]), AC_MSG_ERROR([libxml2 was not found]))
		LIBS="$LIBS -lxml2"
		AC_CHECK_HEADER([libxml/xmlmemory.h], AC_MSG_RESULT([libxml2 header was found]), AC_MSG_ERROR([libxml2 header was not found]))
	fi

	AC_ARG_WITH([pthread],
		AS_HELP_STRING([--with-pthread(=/path)],[use pthread]),
		[MOD_PTHREAD_DIR="$withval"], [MOD_PTHREAD="no"])
	if test "$MOD_PTHREAD" != "no"
	then
		if test "$MOD_PTHREAD_DIR" = "yes"
		then
			MOD_PTHREAD_DIR=/usr
		fi
		echo -n -e "#define PTHREAD_EXT\n\n" >> include/directives.runtime.h
		CPPFLAGS="$CPPFLAGS -I$MOD_PTHREAD_DIR/include"
		LDFLAGS="$LDFLAGS -L$MOD_PTHREAD_DIR/lib"
        	AC_ARG_WITH([pthread-lib],
		AS_HELP_STRING([--with-pthread-lib],[use pthread lib(pthread, thr, lthread, c_r) (default=pthread)]),
		[MOD_PTHREAD_LIB="$withval"], [MOD_PTHREAD_LIB="pthread"])
		AC_CHECK_LIB([$MOD_PTHREAD_LIB], [pthread_create], AC_MSG_RESULT([pthread lib was found]), AC_MSG_ERROR([pthread lib was not found]))
		LIBS="$LIBS -l$MOD_PTHREAD_LIB"
		AC_CHECK_HEADER([pthread.h], AC_MSG_RESULT([pthread header was found]), AC_MSG_ERROR([pthread header was not found]))
	fi

	AC_ARG_WITH([bzip2],
		AS_HELP_STRING([--with-bzip2(=/path)],[use bzip2]),
		[MOD_BZIP2_DIR="$withval"], [MOD_BZIP2="no"])
	if test "$MOD_BZIP2" != "no"
	then
		if test "$MOD_BZIP2_DIR" = "yes"
		then
			MOD_BZIP2_DIR=/usr
		fi
		echo -n -e "#define BZIP2_EXT\n\n" >> include/directives.runtime.h
		CPPFLAGS="$CPPFLAGS -I$MOD_BZIP2_DIR/include"
		LDFLAGS="$LDFLAGS -L$MOD_BZIP2_DIR/lib"
		AC_CHECK_LIB([bz2], [BZ2_bzBuffToBuffCompress], AC_MSG_RESULT([bzip2 lib was found]), AC_MSG_ERROR([bzip2 was not found]))
		LIBS="$LIBS -lbz2"
		AC_CHECK_HEADER([bzlib.h], AC_MSG_RESULT([bzip2 header was found]), AC_MSG_ERROR([bzip2 header was not found]))
	fi

	AC_ARG_WITH([zlib],
		AS_HELP_STRING([--with-zlib(=/path)],[use zlib]),
		[MOD_ZLIB_DIR="$withval"], [MOD_ZLIB="no"])
	if test "$MOD_ZLIB" != "no"
	then
		if test "$MOD_ZLIB_DIR" = "yes"
		then
			MOD_ZLIB_DIR=/usr
		fi
		echo -n -e "#define ZLIB_EXT\n\n" >> include/directives.runtime.h
		CPPFLAGS="$CPPFLAGS -I$MOD_ZLIB_DIR/include"
		LDFLAGS="$LDFLAGS -L$MOD_ZLIB_DIR/lib"
		AC_ARG_ENABLE([zlib-lib],
			AS_HELP_STRING([--enable-zlib-lib], [enable zlib as lib (default=disabled)]),
			[MOD_ZLIB_LIB="yes"])
	        if test "$MOD_ZLIB_LIB" = "yes"
		then
			AC_CHECK_LIB([z], [deflateInit2], AC_MSG_RESULT([zlib lib was found]), AC_MSG_ERROR([zlib was not found]))
			LIBS="$LIBS -lz"
		fi
		AC_CHECK_HEADER([zlib.h], AC_MSG_RESULT([zlib header was found]), AC_MSG_ERROR([zlib header was not found]))
	fi

	AC_ARG_WITH([iconv],
		AS_HELP_STRING([--with-iconv(=/path)],[use iconv]),
		[MOD_ICONV_DIR="$withval"], [MOD_ICONV="no"])
	if test "$MOD_ICONV" != "no"
	then
		if test "$MOD_ICONV_DIR" = "yes"
		then
			MOD_ICONV_DIR=/usr
		fi
		echo -n -e "#define ICONV_EXT\n\n" >> include/directives.runtime.h
		CPPFLAGS="$CPPFLAGS -I$MOD_ICONV_DIR/include"
		LDFLAGS="$LDFLAGS -L$MOD_ICONV_DIR/lib"
		AC_ARG_ENABLE([iconv-lib],
			AS_HELP_STRING([--enable-iconv-lib], [enable iconv as lib (default=disabled)]),
			[MOD_ICONV_LIB="yes"])
	        if test "$MOD_ICONV_LIB" = "yes"
		then
			AC_CHECK_LIB([iconv], [iconv], AC_MSG_RESULT([iconv lib was found]), AC_MSG_ERROR([iconv was not found]))
			LIBS="$LIBS -liconv"
		fi
		AC_CHECK_HEADER([iconv.h], AC_MSG_RESULT([iconv header was found]), AC_MSG_ERROR([iconv header was not found]))
	fi

#check for features
	AC_ARG_ENABLE([exceptions],
        	AS_HELP_STRING([--disable-exceptions], [disable throwing exceptions (default=enabled)]),
                [EXCEPTIONS="$enableval"], [EXCEPTIONS="yes"])
	if test "$EXCEPTIONS" = "no"
	then
		echo -n -e "#define NO_EX\n\n" >> include/directives.runtime.h
	fi

# Checks for header files.
AC_HEADER_SYS_WAIT
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_STAT
AC_HEADER_TIME

AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h unistd.h utime.h poll.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

AC_STRUCT_TM

AC_PROG_GCC_TRADITIONAL

AC_CONFIG_FILES([Makefile
                 tests/Makefile
                 tests/STD_test/Makefile
                 tests/cgiFast_test/Makefile
                 tests/cgi_test/Makefile
                 tests/dbinterface_test/Makefile
                 tests/disk_test/Makefile
                 tests/glob_test/Makefile
                 tests/mysql_test/Makefile
                 tests/postgresql_test/Makefile
                 tests/regexp_test/Makefile
                 tests/socketNB_test/Makefile
                 tests/socketThreads_test/Makefile
                 tests/socket_test/Makefile
                 tests/sqlite_test/Makefile
                 tests/systemThreads_test/Makefile
                 tests/systemTools_test/Makefile
                 tests/timeTools_test/Makefile
                 tests/xexec.module_test/Makefile
                 tests/xmlTools_test/Makefile])

AC_OUTPUT
